--- a/public/css/user.css
+++ b/public/css/user.css
@@ -6,20 +6,16 @@ li
 {
     font-family: 'Microsoft YaHei';
 }
-div,
-li,
-ul,
-input,
-select
-{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 ul,
 li
 {
     list-style: none;
+}
+div,li,ul,input
+{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 span.strong
 {
@@ -48,7 +44,8 @@ a.full_a
     width: 100%;
     height: 100%;
 }
-p{
+p
+{
     overflow: hidden;
 }
 p.marginnone
@@ -71,10 +68,12 @@ p.right
 }
 div.per50
 {
-    width: 50%;
     position: relative;
-    height: 100%;
+
     float: left;
+
+    width: 50%;
+    height: 100%;
 }
 .gray
 {
@@ -96,16 +95,26 @@ div.per50
 {
     font-size: 24px;
 }
+.full_small_nav
+{
+    margin-top: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    width: 96%;
+    color: rgba(255,255,255,1);
+    background-color: rgba(22,22,22,1);
+}
 .user_nav_banner
 {
-    z-index: 1;
-    color: rgba(241,241,241,1);
     position: fixed;
+    z-index: 1;
     top: 0;
 
     width: 100%;
     height: 60px;
 
+    color: rgba(241,241,241,1);
     background-color: rgba(22,22,22,1);
     box-shadow: 0 0 5px 1px rgba(22,22,22,.5);
 }
@@ -114,7 +123,6 @@ div.per50
     width: 1400px;
     height: 60px;
     margin: 0 auto;
-
 }
 .user_nav_search_function
 {
@@ -128,10 +136,43 @@ div.per50
 
     float: left;
 
-    width: 180px;
     height: 60px;
+    padding: 0 20px;
 
+    -webkit-transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
     text-align: center;
+}
+#web_icon
+{
+    padding: 10px;
+}    
+
+#search_button
+{
+    padding: 10px;
+}
+#search_button img
+{
+    width: 30px;
+    height: 30px;
+}
+input.search_input
+{
+    width: 240px;
+    height: 30px;
+    padding: 0 10px;
+
+    border: 1px solid rgba(0,0,0,.1);
+    border-radius: 5px;
+    outline: none;
+    box-shadow: 0 0 0 0 rgba(0,0,0,0);
+}
+input.search_input:focus
+{
+    border: 1px solid rgba(0,146,210,1);
+    box-shadow: 0 0 5px 1px rgba(0,146,210,1);
 }
 .user_nav_user_function
 {
@@ -145,29 +186,34 @@ div.per50
 
     float: left;
 
-    width: 120px;
     height: 60px;
+    padding: 0 20px;
 
     text-align: center;
 }
 .avatar_banner
 {
+    overflow: hidden;
+
     width: 40px;
     height: 40px;
+
     border-radius: 50%;
-    overflow: hidden;
 }
-.user_nav_user_function > li.avatar{
-    padding: 10px;
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
+.user_nav_user_function > li.avatar
+{
     overflow: hidden;
+
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+
+    border-radius: 50%;
 }
 .user_nav_user_function > li.avatar img
 {
-    height: 40px;
     width: 40px;
+    height: 40px;
 }
 .user_main_banenr
 {
@@ -179,25 +225,30 @@ div.per50
 }
 .user_main_content
 {
+    display: flex;
+
     width: 1400px;
     min-height: 1000px;
     margin: 0 auto;
-    display: flex;
+
     justify-content: space-between;
 }
 .user_main_left_content
 {
-    padding: 40px 0 0 50px;
-    background-color: #fff;
-    min-height:1000px;
+    overflow: hidden;
     width: 1000px;
+    min-height: 1000px;
+    padding: 40px 50px 0 50px;
+
+    background-color: #fff;
     box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
 }
 .user_main_right_content
 {
-    background-color: #fff;
-    min-height:1000px;
     width: 350px;
+    height: 1000px;
+
+    background-color: #fff;
     box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
 }
 .user_main_job_level1
@@ -205,41 +256,50 @@ div.per50
     width: 900px;
     min-height: 36px;
     max-height: 144px;
-    border-left: 5px solid rgba(0,0,0,.7);
     margin-top: 5px;
+
+    border-left: 5px solid rgba(0,0,0,.7);
 }
 .user_main_job_level2
 {
     width: 900px;
     min-height: 36px;
     max-height: 144px;
-    border-left: 5px solid rgba(0,0,0,.7);
     margin-top: 5px;
+
+    border-left: 5px solid rgba(0,0,0,.7);
 }
 .user_main_job_key
 {
     width: 900px;
     min-height: 36px;
     max-height: 144px;
-    border-left: 5px solid rgba(0,0,0,.7);
     margin-top: 5px;
+
+    border-left: 5px solid rgba(0,0,0,.7);
 }
 .user_main_job_keylist
 {
+    display: flex;
+    overflow: hidden;
+
     width: 900px;
     min-height: 36px;
     max-height: 144px;
-    overflow: hidden;
-    display: flex;
+
     flex-wrap: wrap;
 }
-.user_main_job_keylist li{
-    color: rgba(0,0,0,.8);
-    height: 36px;
+.user_main_job_keylist li
+{
     font-size: 15px;
     line-height: 36px;
-    text-align: center;
+
+    height: 36px;
     margin-left: 30px;
+
+    text-align: center;
+
+    color: rgba(0,0,0,.8);
 }
 .user_main_job_keylist li:hover
 {
@@ -247,20 +307,27 @@ div.per50
 }
 
 
+
+
+
+
+
+
+
 .index_single_item
 {
-    float: left;
     top: 50px;
-    margin-top: 50px;
 
+    float: left;
     overflow: hidden;
 
     width: 450px;
     height: 180px;
+    margin-top: 50px;
 
     -webkit-transition: all .1s;
-    -o-transition: all .1s;
-    transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
 
     border-left: 5px solid rgba(0,0,0,.7);
 }
@@ -271,8 +338,8 @@ div.per50
 .index_single_item a
 {
     -webkit-transition: all .1s;
-    -o-transition: all .1s;
-    transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
 }
 .index_single_item a:hover
 {
@@ -301,8 +368,8 @@ div.per50
 
     cursor: pointer;
     -webkit-transition: all .1s;
-    -o-transition: all .1s;
-    transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
     text-align: center;
 
     color: #fff;
@@ -310,6 +377,134 @@ div.per50
     background-color: rgba(0,146,210,.8);
 }
 
+.paginate
+{
+    box-sizing: content-box;
+    line-height: 80px;
+
+    padding-top: 20px;
+    overflow: hidden;
+
+    width: 900px;
+    height: 80px;
+}
+.pagination
+{
+    margin: 22px 0;
+    padding-left: 0;
+
+    border-radius: 4px;
+}.pagination > li
+{
+    display: inline;
+}.pagination > li > a,
+.pagination > li > span
+{
+    line-height: 1.6;
+
+    position: relative;
+
+    float: left;
+
+    margin-left: -1px;
+    padding: 6px 12px;
+
+    text-decoration: none;
+
+    color: #3097d1;
+    border: 1px solid #ddd;
+    background-color: #fff;
+}.pagination > li:first-child > a,
+.pagination > li:first-child > span
+{
+    margin-left: 0;
+
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}.pagination > li:last-child > a,
+.pagination > li:last-child > span
+{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover
+{
+    z-index: 2;
+
+    color: #216a94;
+    border-color: #ddd;
+    background-color: #eee;
+}.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover
+{
+    z-index: 3;
+
+    cursor: default;
+
+    color: #fff;
+    border-color: #3097d1;
+    background-color: #3097d1;
+}.pagination > .disabled > a,
+.pagination > .disabled > a:focus,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > span,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > span:hover
+{
+    cursor: not-allowed;
+
+    color: #777;
+    border-color: #ddd;
+    background-color: #fff;
+}.pagination-lg > li > a,
+.pagination-lg > li > span
+{
+    font-size: 18px;
+    line-height: 1.3333333;
+
+    padding: 10px 16px;
+}.pagination-lg > li:first-child > a,
+.pagination-lg > li:first-child > span
+{
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}.pagination-lg > li:last-child > a,
+.pagination-lg > li:last-child > span
+{
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}.pagination-sm > li > a,
+.pagination-sm > li > span
+{
+    font-size: 12px;
+    line-height: 1.5;
+
+    padding: 5px 10px;
+}.badge,
+.label
+{
+    font-weight: 700;
+    line-height: 1;
+
+    text-align: center;
+    white-space: nowrap;
+}.pagination-sm > li:first-child > a,
+.pagination-sm > li:first-child > span
+{
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}.pagination-sm > li:last-child > a,
+.pagination-sm > li:last-child > span
+{
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
 
 
 
