--- a/resources/views/jobs/resume---------new/user.css
+++ b/resources/views/jobs/resume---------new/user.css
@@ -714,28 +714,69 @@ input.search_input:focus
 
 
 
-.resume_moduel
+
+
+
+
+
+.resume_model
 {
-    width: 1300px;
-    height: 1300px;
+    width: 78%;
     min-height: 1200px;
-    background-color: red;
+    background-color: #fff;
+    box-shadow: 0 0 5px 1px rgba(100,100,100,.1);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.resume_model_edit
+{
+    width: 20%;
+    min-height: 1000px;
+    max-height: 1200px;
+    background-color: #fff;
+    box-shadow: 0 0 5px 1px rgba(100,100,100,.1);
+}
+.resume_model_edit_list
+{
+    width: 100%;
+    padding: 20px 20px 0 20px;
+    min-height: 40px;
+}
+.resume_model_edit_list > li
+{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 40px;
+    padding-left: 10px;
+    border-bottom: 1px solid rgba(241,241,241,1);
+}
+.checkcube
+{
+    cursor: pointer;
+    right: 10px;
+    top: 10px;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    -webkit-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    border: 3px solid rgba(241,241,241,1);
+}
+.checkcube:hover
+{
+    top: 10px;
+    -webkit-transform: rotate(-50deg);
+    -ms-transform: rotate(-50deg);
+    -o-transform: rotate(-50deg);
+    transform: rotate(-50deg);
+    border-top: 3px solid rgba(0,146,210,0);
+    border-right: 3px solid rgba(0,146,210,0);
+    border-left: 3px solid rgba(0,146,210,1);
+    border-bottom: 3px solid rgba(0,146,210,1);
+    height: 12px;
+    width: 20px;
+}
 
 
 
