--- a/public/css/user.css
+++ b/public/css/user.css
@@ -20,6 +20,28 @@ input
     margin: 0;
     padding: 0;
 }
+select
+{
+    font-size: 14px;
+    line-height: 40px;
+
+    width: 100px;
+    height: 40px;
+    margin: 0 0 30px 20px;
+    padding: 0 5px;
+
+    cursor: pointer;
+    letter-spacing: 1px;
+
+    color: rgba(0,0,0,.5);
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 2px;
+    outline: none;
+}
+input:focus
+{
+    outline: none;
+}
 span.strong
 {
     font-size: 22px;
@@ -43,8 +65,8 @@ span.morebig
 a
 {
     -webkit-transition: all .1s;
-    -o-transition: all .1s;
-    transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
 }
 a.full_a
 {
@@ -75,6 +97,24 @@ p.right
     display: inline-block;
     float: right;
 }
+div.per20
+{
+    position: relative;
+
+    float: left;
+
+    width: 20%;
+    height: 100%;
+}
+div.per30
+{
+    position: relative;
+
+    float: left;
+
+    width: 30%;
+    height: 100%;
+}
 div.per50
 {
     position: relative;
@@ -82,6 +122,24 @@ div.per50
     float: left;
 
     width: 50%;
+    height: 100%;
+}
+div.per70
+{
+    position: relative;
+
+    float: left;
+
+    width: 70%;
+    height: 100%;
+}
+div.per80
+{
+    position: relative;
+
+    float: left;
+
+    width: 80%;
     height: 100%;
 }
 .gray
@@ -405,14 +463,15 @@ input.search_input:focus
 .user_main_job_keylist_order a
 {
     display: inline-block;
+
     padding: 0 10px;
 }
 .user_main_job_keylist_order li
 {
-    min-width: 70px;
     font-size: 15px;
     line-height: 40px;
 
+    min-width: 70px;
     height: 40px;
     padding: 0 10px;
 
@@ -493,7 +552,7 @@ input.search_input:focus
 }
 .user_main_single_jobinfo_button a:hover
 {
-    color:rgba(255,255,255,1);
+    color: rgba(255,255,255,1);
 }
 
 
@@ -753,6 +812,7 @@ input.search_input:focus
 
     width: 78%;
     min-height: 800px;
+    padding: 40px;
 
     background-color: #fff;
     box-shadow: 0 0 5px 1px rgba(100,100,100,.1);
@@ -771,6 +831,7 @@ input.search_input:focus
 .resume_model_edit_list
 {
     position: relative;
+
     float: left;
     overflow: hidden;
 
@@ -791,6 +852,66 @@ input.search_input:focus
 
     border-bottom: 1px solid rgba(241,241,241,1);
 }
+.single_info_banner
+{
+    width: 100%;
+    padding: 30px;
+
+    color: rgba(0,0,0,.5);
+    overflow: hidden;
+}
+.resume_user_base_info_banner
+{
+    height: 355px;
+}
+.resume_user_base_info
+{
+    padding-left: 50px;
+    border-left: 5px solid rgba(0,0,0,.2);
+}
+.resume_user_pic
+{
+    padding: 50px;
+
+    background-color: #eee;
+}
+.single_info_banner input
+{
+    width: 350px;
+    height: 35px;
+    margin-bottom: 25px;
+    padding: 0 10px;
+
+    -webkit-transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
+
+    color: rgba(0,0,0,.5);
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 3px;
+    margin-left: 20px;
+}
+.single_info_banner input.small
+{
+    width: 150px;
+}
+.single_info_banner input.mid
+{
+    width: 300px;
+}
+.single_info_banner input.big
+{
+    width: 500px;
+}
+.single_info_banner input:focus
+{
+    border: 1px solid rgba(0,146,210,.6);
+    box-shadow: 0 0 3px 1px rgba(0,146,210,.6);
+}
+
+
+
+
 .checkcube
 {
     position: absolute;
