admin消息提醒页面

--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -93,7 +93,7 @@ a.full_a
 {
     font-size: 18px;
 
-    float: right;
+    float: left;
 
     width: 120px;
     height: 70px;
@@ -1202,4 +1202,35 @@ span.numofpeople
 {
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
+}
+.notification
+{
+    padding-left: 250px;
+    padding-right: 250px;
+
+}
+.notification_head
+{
+    padding:30px 40px 0px 40px;
+}
+.notification_head > img
+{
+    margin-right: 7px;
+}
+.notification_content
+{
+    margin: 0 35px 0px 35px;
+}
+.notification_content > li > img
+{
+    margin-right: 7px;
+}
+.notification_message
+{
+    margin: 5px 0 0 0 ;
+}
+
+.notification_message > a
+{
+    color:dodgerblue;
 }
