--- a/public/css/user.css
+++ b/public/css/user.css
@@ -21,6 +21,10 @@ textarea
     margin: 0;
     padding: 0;
 }
+body
+{
+    background-color: rgba(241,241,241,1);
+}
 select
 {
     font-size: 14px;
@@ -42,6 +46,10 @@ select
 input:focus
 {
     outline: none;
+}
+input.nomarginbottom,textarea.nomarginbottom
+{
+    margin-bottom: 0;
 }
 textarea:focus
 {
@@ -857,6 +865,7 @@ input.search_input:focus
 }
 .resume_model_edit_list > li
 {
+    cursor: pointer;
     line-height: 40px;
 
     position: relative;
@@ -998,6 +1007,7 @@ input.search_input:focus
 {
     padding: 50px;
 
+    cursor: pointer;
     background-color: #eee;
 }
 
