--- a/public/css/user.css
+++ b/public/css/user.css
@@ -393,7 +393,7 @@ input.search_input:focus
 .user_main_right_content
 {
     width: 350px;
-    height: 1000px;
+    height: 700px;
 
     background-color: #fff;
     box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
@@ -549,6 +549,7 @@ input.search_input:focus
     font-size: 14px;
     line-height: 32px;
 
+width: 120px;
     position: relative;
 
     height: 32px;
