--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -133,19 +133,23 @@ a.full_a
 
     width: 240px;
 }
+
+
+
 .nav_user_function > li
 {
     line-height: 70px;
 
     float: left;
+    overflow: hidden;
 
     width: 120px;
     height: 70px;
 
     cursor: pointer;
-    -webkit-transition: all .3s;
-         -o-transition: all .3s;
-            transition: all .3s;
+    -webkit-transition: background-color .3s;
+         -o-transition: background-color .3s;
+            transition: background-color .3s;
     text-align: center;
 
     color: #f1f1f1;
@@ -154,16 +158,13 @@ a.full_a
 {
     display: inline-block;
 
-    height: 70px;
-}
-.nav_user_function > li:hover
-{
-    color: #161616;
-    background-color: rgba(241,241,241,1);
+    box-sizing: border-box;
+    width: 70px;
+    height: 50px;
 }
 .nav_user_function > li:hover a
 {
-    color: #161616;
+    color: rgba(241,241,241,1);
 }
 .nav_user_function > li.avatar
 {
@@ -188,40 +189,68 @@ a.full_a
 }
 .nav_user_function > li:hover .nav_user_menu
 {
-    height: 210px;
+    height: 100px;
 
     opacity: 1;
-    color: rgba(241,241,241,1);
 }
 .nav_user_menu
 {
-    position: relative;
+    position: absolute;
+    top: 70px;
 
     overflow: hidden;
 
     width: 120px;
     height: 0;
 
-    -webkit-transition: height .3s, opacity .2s .1s;
-         -o-transition: height .3s, opacity .2s .1s;
-            transition: height .3s, opacity .2s .1s;
+    -webkit-transition: all .3s;
+         -o-transition: all .3s;
+            transition: all .3s;
 
     opacity: 0;
 }
 .nav_user_menu > li
 {
-    line-height: 70px;
+    line-height: 50px;
+
+    position: relative;
 
     width: 120px;
-    height: 70px;
+    height: 50px;
 
     -webkit-transition: all .3s;
          -o-transition: all .3s;
             transition: all .3s;
     text-align: center;
 
-    color: rgba(22,22,22,1);
-    background-color: rgba(241,241,241,1);
+    color: rgba(241,241,241,1);
+    border-left: 5px solid rgba(241,241,241,0);
+    background-color: rgba(80,80,80,1);
+}
+.nav_user_menu a
+{
+    width: 100%;
+}
+.numofmeg
+{
+    font-size: 10px;
+    line-height: 15px;
+
+    position: absolute;
+    top: 20%;
+    left: 67%;
+
+    width: 15px;
+    height: 15px;
+
+    text-align: center;
+
+    border-radius: 50%;
+    background-color: rgba(210,120,0,1);
+}
+.nav_user_menu > li:hover
+{
+    border-left: 5px solid rgba(0,146,220,1);
 }
 
 .main_banner
@@ -662,6 +691,16 @@ textarea.job_description:focus
     margin-bottom: 30px;
 
     border-bottom: 1px solid rgba(0,146,210,1);
+}
+.line_top
+{
+    font-size: 24px;
+    line-height: 30px;
+
+    width: 900px;
+    height: 30px;
+
+    border-top: 1px solid rgba(241,241,241,1);
 }
 .job_des_moduel p
 {
@@ -1203,15 +1242,23 @@ span.numofpeople
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
+
+
+
+
+
 .notification
 {
-    padding-left: 250px;
+    padding-top: 50px;
     padding-right: 250px;
-
+    padding-left: 250px;
 }
 .notification_head
 {
-    padding:30px 40px 20px 40px;
+    line-height: 70px;
+
+    width: 100%;
+    height: 70px;
 }
 .notification_head > img
 {
@@ -1220,11 +1267,47 @@ span.numofpeople
 .notification_banner
 {
     float: left;
+
+    height: 70px;
+
+    cursor: pointer;
+    -webkit-transition: all .2s;
+         -o-transition: all .2s;
+            transition: all .2s;
+
+    border-bottom: 5px solid rgba(0,146,210,0);
+}
+.notification_banner:hover
+{
+    border-bottom: 5px solid rgba(0,146,210,.7);
 }
 
 .notification_content
 {
-    margin: 0 35px 0px 35px;
+    position: relative;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 120px;
+    padding: 35px 20px;
+
+    cursor: pointer;
+    -webkit-transition: all .2s;
+         -o-transition: all .2s;
+            transition: all .2s;
+    letter-spacing: 1px;
+
+    color: rgba(0,0,0,.7);
+    border-bottom: 1px solid rgba(241,241,241,1);
+    box-shadow: 0 0 2px 1px rgba(0,0,0,0);
+}
+.notification_content:hover
+{
+    top: -1px;
+    left: -1px;
+
+    box-shadow: 0 0 2px 1px rgba(110,110,110,.2);
 }
 .notification_content > li > img
 {
@@ -1237,9 +1320,9 @@ span.numofpeople
 
 .notification_message > a
 {
-    color:dodgerblue;
+    color: dodgerblue;
 }
 .notification_banner > a
 {
-    color:#4b4b4b;
+    color: #4b4b4b;
 }
