--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1292,20 +1292,20 @@ span.numofpeople
     height: 120px;
     padding: 35px 20px;
 
-    cursor: pointer;
-    -webkit-transition: all .2s;
-         -o-transition: all .2s;
-            transition: all .2s;
+    -webkit-transition: all .3s;
+         -o-transition: all .3s;
+            transition: all .3s;
     letter-spacing: 1px;
 
     color: rgba(0,0,0,.7);
     border-bottom: 1px solid rgba(241,241,241,1);
+    background-color: #fff;
     box-shadow: 0 0 2px 1px rgba(0,0,0,0);
 }
 .notification_content:hover
 {
-    top: -1px;
-    left: -1px;
+    top: -5px;
+    left: -5px;
 
     box-shadow: 0 0 2px 1px rgba(110,110,110,.2);
 }
