--- a/public/css/user.css
+++ b/public/css/user.css
@@ -180,6 +180,16 @@ div.per80
 {
     font-size: 24px;
 }
+.inline_block_a
+{
+    position: relative;
+    top: 3px;
+    width: 50%;
+    overflow: hidden;
+    display: inline-block;
+    height: 21px;
+    line-height: 21px;
+}
 .text_align_l
 {
     display: inline-block;
