--- a/public/css/user.css
+++ b/public/css/user.css
@@ -452,7 +452,11 @@ input.search_input:focus
     height: 180px;
     margin-top: 20px;
 
-    background-color: #eee;
+}
+.user_main_right_content_pic img
+{
+    width: 100%;
+    height: 100%;
 }
 .user_main_right_content_user_info
 {
