--- a/public/css/user.css
+++ b/public/css/user.css
@@ -405,13 +405,14 @@ input.search_input:focus
 }
 .user_main_right_content
 {
+    position: relative;
+
     overflow: scroll;
     overflow-x: hidden;
-    position: relative;
 
     width: 350px;
     min-height: 500px;
-    max-height: 1200px;
+    max-height: 1000px;
     padding: 30px;
 
     color: rgba(0,0,0,.7);
@@ -421,6 +422,7 @@ input.search_input:focus
 }
 .user_main_right_content .p
 {
+    font-size: 15px;
     line-height: 30px;
 
     float: right;
@@ -451,7 +453,6 @@ input.search_input:focus
     width: 45%;
     height: 180px;
     margin-top: 20px;
-
 }
 .user_main_right_content_pic img
 {
@@ -470,44 +471,53 @@ input.search_input:focus
 .user_main_right_content_user_info_item
 {
     position: relative;
+
     width: 100%;
     min-height: 180px;
     margin-left: 10px;
-    padding-left: 20px;
     padding-top: 20px;
+    padding-left: 20px;
+
     border-left: 2px solid rgba(0,0,0,.2);
 }
 .user_main_right_content_user_info_item .round
 {
-    width: 7px;
-    height: 7px;
     position: absolute;
-    background-color: rgba(0,146,210,1);
-    border-radius: 50%;
     top: 32px;
     left: -4px;
+
+    width: 7px;
+    height: 7px;
+
+    border-radius: 50%;
+    background-color: rgba(0,146,210,1);
 }
 .user_main_right_content_user_projectexp,
 .user_main_right_content_user_jobexp,
 .user_main_right_content_user_selfdes
 {
     padding-right: 30px;
+
     color: rgba(0,0,0,.5);
 }
 .resume_small_edit_button
 {
+    line-height: 30px;
+
+    float: left;
+
     width: 100%;
     height: 30px;
-    background-color: rgba(0,146,210,1);
-    color: rgba(241,241,241,1);
-    line-height: 30px;
-    text-align: center;
-    float: left;
+    margin-top: 50px;
+
     cursor: pointer;
     -webkit-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
-    margin-top: 50px;
+         -o-transition: all .2s;
+            transition: all .2s;
+    text-align: center;
+
+    color: rgba(241,241,241,1);
+    background-color: rgba(0,146,210,1);
 }
 .resume_small_edit_button:hover
 {
@@ -667,11 +677,14 @@ input.search_input:focus
 }
 .user_single_item_jobinfo p
 {
-    height: 21px;
-    white-space: nowrap;
-    overflow: hidden;
     font-size: 15px;
+
+    overflow: hidden;
+
+    height: 21px;
     padding-right: 10px;
+
+    white-space: nowrap;
 }
 
 .user_main_single_jobinfo_button
@@ -1038,10 +1051,10 @@ input.search_input:focus
     font-size: 18px;
     line-height: 40px;
 
+    float: left;
+
     width: 180px;
     height: 40px;
-    margin: 0 auto;
-    margin-top: 20px;
 
     cursor: pointer;
     text-align: center;
@@ -1050,7 +1063,32 @@ input.search_input:focus
     border-radius: 5px;
     background-color: rgba(0,146,210,1);
 }
+.see_resume_button
+{
+    font-size: 18px;
+    line-height: 40px;
 
+    float: right;
+
+    width: 180px;
+    height: 40px;
+
+    cursor: pointer;
+    text-align: center;
+
+    color: #fff;
+    border-radius: 5px;
+    background-color: rgba(0,146,210,1);
+}
+.button_banner
+{
+    overflow: hidden;
+
+    width: 700px;
+    height: 40px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
 
 
 
