--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1359,5 +1359,72 @@ span.numofpeople
 {
     width: 100%;
     min-height: 400px;
-    background-color: red;
+}
+.resume_base,
+.resume_skill,
+.resume_selfdes
+{
+    position: relative;
+}
+.resume_tittle
+{
+    padding: 0 10px;
+    font-size: 16px;
+    color: rgba(241,241,241,1);
+    position: absolute;top: -5%;
+    left: 33%;
+    background-color: #254665;
+}
+.resume_avatar
+{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    position: relative;
+}
+.resume_hope
+{
+    width: 70%;
+    margin: 0 auto;
+    height: 80px;
+    font-size: 14px;
+    text-align: center;
+    color: rgba(241,241,241,1);
+    margin-bottom: 80px;
+}
+.resume_base,
+.resume_skill,
+.resume_selfdes
+{
+    color: rgba(241,241,241,1);
+    width: 90%;
+    margin: 0 auto;
+    border-top: 5px solid #fff;
+}
+.resume_base
+{
+    height: 400px;
+}
+.resume_base p
+{
+    height: 40px;
+    line-height: 40px;
+}
+.resume_base img
+{
+    height: 40px;
+    width: 40px;
+    float: left;
+}
+.resume_skill
+{
+    height: 210px;
+}
+.resume_selfdes
+{
+    height: 210px;
 }
