--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1202,9 +1202,22 @@ input.search_input:focus
 }
 .resume_user_pic
 {
+    position: relative;
+
+    float: left;
+    overflow: hidden;
+
+    width: 20%;
+    height: 285px;
+
     cursor: pointer;
 
     background-color: #eee;
+}
+.resume_user_pic img
+{
+    width: 100%;
+    height: 285px;
 }
 
 
