--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1332,31 +1332,39 @@ span.numofpeople
 /*resume single*/
 .resume_banner
 {
+    overflow: hidden;
+
     width: 1100px;
     min-height: 1200px;
     margin: 0 auto;
-    overflow: hidden;
+
+    background-color: #fff;
 }
 .resume_left_banner
 {
+    float: left;
+    overflow: hidden;
+
     width: 300px;
     min-height: 1200px;
-    float: left;
+
     background-color: #254665;
-    overflow: hidden;
 }
 .resume_right_banner
 {
-    min-height: 1200px;
-    width: 800px;
-    background-color: #fff;
     float: right;
     overflow: hidden;
+
+    width: 800px;
+    min-height: 1200px;
+
+    background-color: #fff;
 }
 .resume_schoolexp,
 .resume_projectexp,
 .resume_jobexp
 {
+    padding: 30px;
     width: 100%;
     min-height: 400px;
 }
@@ -1368,63 +1376,104 @@ span.numofpeople
 }
 .resume_tittle
 {
-    padding: 0 10px;
     font-size: 16px;
-    color: rgba(241,241,241,1);
-    position: absolute;top: -5%;
+
+    position: absolute;
+    top: -15px;
     left: 33%;
+
+    padding: 0 10px;
+
+    color: rgba(241,241,241,1);
     background-color: #254665;
+}
+.resume_exptittle
+{
+    width: 100%;
+    height: 60px;
+    font-size: 28px;
+    line-height: 50px;
+    color: #254665;
+    padding-bottom: 10px;
+    border-bottom: 3px solid #254665;
+}
+.resume_exptittle img
+{
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-right: 10px;
 }
 .resume_avatar
 {
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    background-color: #fff;
+    position: relative;
+
+    overflow: hidden;
+
+    width: 160px;
+    height: 160px;
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 30px;
-    position: relative;
+
+    border: 5px solid #aaa;
+    border-radius: 50%;
+    background-color: #fff;
 }
 .resume_hope
 {
-    width: 70%;
-    margin: 0 auto;
-    height: 80px;
     font-size: 14px;
-    text-align: center;
-    color: rgba(241,241,241,1);
+
+    width: 70%;
+    height: 80px;
+    margin: 0 auto;
     margin-bottom: 80px;
+
+    text-align: center;
+
+    color: rgba(241,241,241,1);
 }
 .resume_base,
 .resume_skill,
 .resume_selfdes
 {
-    color: rgba(241,241,241,1);
     width: 90%;
     margin: 0 auto;
+    font-size: 14px;
+
+    color: rgba(241,241,241,1);
     border-top: 5px solid #fff;
 }
 .resume_base
 {
     height: 400px;
+    padding-top: 20px;
 }
 .resume_base p
 {
-    height: 40px;
+    font-size: 14px;
     line-height: 40px;
+
+    display: block;
+
+    box-sizing: border-box;
+    height: 50px;
+    padding: 5px 0;
+    padding-left: 20px;
 }
 .resume_base img
 {
-    height: 40px;
-    width: 40px;
     float: left;
+
+    width: 40px;
+    min-height: 40px;
+    margin-right: 20px;
 }
-.resume_skill
-{
-    height: 210px;
-}
+.resume_skill,
 .resume_selfdes
 {
-    height: 210px;
+    line-height: 32px;
+    letter-spacing: 1px;
+    padding: 20px;
+    min-height: 210px;
 }
