--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1364,6 +1364,8 @@ span.numofpeople
 .resume_projectexp,
 .resume_jobexp
 {
+    letter-spacing: 1px;
+    color: rgba(0,0,0,.7);
     padding: 30px;
     width: 100%;
     min-height: 400px;
@@ -1396,6 +1398,7 @@ span.numofpeople
     color: #254665;
     padding-bottom: 10px;
     border-bottom: 3px solid #254665;
+    margin-bottom: 30px;
 }
 .resume_exptittle img
 {
