--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1620,13 +1620,19 @@ p.p_company_info
 }
 .resume_schoolexp,
 .resume_projectexp,
-.resume_jobexp
+.resume_jobexp,
+.resume_priceandessay
 {
-    letter-spacing: 1px;
-    color: rgba(0,0,0,.7);
-    padding: 30px;
+    font-size: 14px;
+    line-height: 28px;
+
     width: 100%;
-    min-height: 400px;
+    min-height: 300px;
+    padding: 30px;
+
+    letter-spacing: 1px;
+
+    color: rgba(0,0,0,.7);
 }
 .resume_base,
 .resume_skill,
@@ -1649,20 +1655,23 @@ p.p_company_info
 }
 .resume_exptittle
 {
-    width: 100%;
-    height: 50px;
     font-size: 24px;
     line-height: 40px;
-    color: #254665;
-    padding-bottom: 10px;
-    border-bottom: 3px solid #254665;
+
+    width: 100%;
+    height: 50px;
     margin-bottom: 30px;
+    padding-bottom: 10px;
+
+    color: #254665;
+    border-bottom: 3px solid #254665;
 }
 .resume_exptittle img
 {
+    float: left;
+
     width: 40px;
     height: 40px;
-    float: left;
     margin-right: 10px;
 }
 .resume_avatar
@@ -1681,6 +1690,11 @@ p.p_company_info
     border-radius: 50%;
     background-color: #fff;
 }
+.resume_avatar img
+{
+    width: 100%;
+    height: 100%;
+}
 .resume_hope
 {
     font-size: 14px;
@@ -1698,9 +1712,10 @@ p.p_company_info
 .resume_skill,
 .resume_selfdes
 {
+    font-size: 14px;
+
     width: 90%;
     margin: 0 auto;
-    font-size: 14px;
 
     color: rgba(241,241,241,1);
     border-top: 5px solid #fff;
@@ -1734,9 +1749,11 @@ p.p_company_info
 .resume_selfdes
 {
     line-height: 32px;
-    letter-spacing: 1px;
-    padding: 20px;
+
     min-height: 210px;
+    padding: 20px;
+
+    letter-spacing: 1px;
 }
 
 
@@ -1783,6 +1800,3 @@ p.p_company_info
     background-color: #fff;
     box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
 }
-
-
-
